# remini

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
corpus/: Cargo.toml  README.md  model.ipynb  model.py
corpus/examples/: corpus.py  corpus.rs
corpus/models/: model-large.onnx  small-dynamic.onnx
corpus/src/: lib.rs
csv-to-txt/: Cargo.toml
csv-to-txt/src/: lib.rs
csv-to-txt/src/toxicity/: jigsaw.rs  mod.rs  youtube.rs
remini/: Cargo.toml  build.rs
remini-error/: Cargo.toml
remini-error/src/: lib.rs
remini/proto/: remini.proto
remini/src/: main.rs
src/: main.rs
src/corpus/: README.md  mod.rs  model.py
superego/: Cargo.toml  model.py
superego/src/: lib.rs
