[workspace]
resolver = "2"
members = [
    "corpus",
    "csv-to-txt",
    "remini",
    "remini-error",
    "superego",
]

[workspace.package]
version = "1.0.0"
description = "machine learning algorithms"
readme = "README.md"
edition = "2021"
license = "MPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = "z"
debug = true

[workspace.dependencies]
tract-onnx = "0.21.7"
tracing = "0.1"
