[workspace]
resolver = "2"
members = [
    "corpus",
    "csv-to-txt",
    "remini",
    "remini-error",
    "superego",
]

[workspace.package]
version = "1.0.1"
description = "machine learning algorithms for embedded systems."
readme = "README.md"
edition = "2024"
license = "MPL"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = "z"
debug = true

[workspace.dependencies]
tract-onnx = "0.22.0"
tracing = "0.1"
image = { version = "0.25", default-features = false }
