[package]
name = "corpus"
version = "0.1.1"
description = "corpus detects probability of nudity in images"
readme = "README.md"
edition.workspace = true
license.workspace = true

[[example]]
name = "corpus"
path = "examples/corpus.rs"
bench = false

[dependencies]
tract-onnx = { workspace = true }
tracing = { workspace = true }
remini-error = { path = "../remini-error" }
image = { workspace = true, features = ["rayon", "jpeg", "png", "webp"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }