[package]
name = "csv-to-txt"
version.workspace = true
description = "CSV file to txt files in directory."
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
remini-error = { path = "../remini-error" }
tracing = { workspace = true }