[package]
name = "remini"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.14", features = ["zstd"] }
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

anyhow = "1"
corpus = { path = "../corpus" }
superego = { path = "../superego" }

tracing = { workspace = true }
tracing-subscriber = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
